--- a/index.html
+++ b/index.html
@@ -650,89 +650,15 @@
             color: white;
         }
 
-        .contact-form {
-            max-width: 650px; /* Wider form */
-            margin: 0 auto;
-            padding: 2.5rem; /* Inner padding */
-            background: rgba(255,255,255,0.1); /* Subtle background for form */
-            border-radius: 20px;
-            box-shadow: 0 15px 30px rgba(0,0,0,0.2);
+        /* Google Form Embed Container Styling */
+        .google-form-container {
+            max-width: 700px; /* Limits the width of the iframe container */
+            margin: 0 auto; /* Centers the container */
+            background: rgba(255,255,255,0.1); /* Subtle background matching the theme */
+            border-radius: 20px; /* Rounded corners for the container */
+            padding: 20px; /* Padding inside the container */
+            box-shadow: 0 15px 30px rgba(0,0,0,0.2); /* Shadow for the container */
         }
-
-        .form-group {
-            margin-bottom: 1.8rem; /* More space */
-        }
-
-            .form-group label {
-                display: block;
-                margin-bottom: 0.6rem; /* More space */
-                font-weight: 600;
-                font-size: 1.05rem;
-            }
-
-            .form-group input,
-            .form-group select,
-            .form-group textarea {
-                width: 100%;
-                padding: 14px; /* More padding */
-                border: 1px solid rgba(255,255,255,0.3); /* Subtle border */
-                background-color: rgba(255,255,255,0.1); /* More visible input field */
-                color: white;
-                border-radius: 12px; /* More rounded */
-                font-size: 1rem;
-                transition: box-shadow 0.3s ease, border-color 0.3s ease, background-color 0.3s ease;
-            }
-
-                .form-group input::placeholder,
-                .form-group textarea::placeholder {
-                    color: rgba(255,255,255,0.7);
-                }
-
-                .form-group input:focus,
-                .form-group select:focus,
-                .form-group textarea:focus {
-                    outline: none;
-                    box-shadow: 0 0 0 4px rgba(255,255,255,0.3); /* Stronger, colored focus ring */
-                    border-color: white;
-                    background-color: rgba(255,255,255,0.2);
-                }
-            /* Style for select dropdown arrow */
-            .form-group select {
-                -webkit-appearance: none;
-                -moz-appearance: none;
-                appearance: none;
-                background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24' fill='white'%3E%3Cpath d='M7 10l5 5 5-5z'/%3E%3C/svg%3E");
-                background-repeat: no-repeat;
-                background-position: right 12px center;
-                background-size: 16px;
-                padding-right: 30px; /* Space for the custom arrow */
-            }
-
-            .form-group option {
-                color: #333; /* Darker text for options in dropdown */
-                background-color: white;
-            }
-
-
-        .submit-btn {
-            background: #ff6b6b;
-            color: white;
-            padding: 15px 30px; /* Larger button */
-            border: none;
-            border-radius: 50px;
-            font-size: 1.15rem; /* Larger font */
-            cursor: pointer;
-            transition: all 0.3s ease;
-            width: 100%;
-            font-weight: 600;
-            letter-spacing: 0.5px;
-        }
-
-            .submit-btn:hover {
-                background: #ff5252;
-                transform: translateY(-3px);
-                box-shadow: 0 12px 25px rgba(255, 107, 107, 0.4);
-            }
 
         /* Footer */
         .footer {
@@ -839,8 +765,9 @@
                 font-size: 4rem;
             }
 
-            .contact-form {
-                padding: 1.8rem;
+            .google-form-container { /* Adjust container for smaller screens */
+                padding: 15px;
+                border-radius: 15px;
             }
 
             .footer-content {
@@ -1025,49 +952,18 @@
     <section id="contact" class="contact">
         <div class="container">
             <h2 class="section-title">Get Started Today</h2>
-            <form class="contact-form" onsubmit="handleSubmit(event)">
-                <div class="form-group">
-                    <label for="name">Full Name</label>
-                    <input type="text" id="name" name="name" required>
-                </div>
-                <div class="form-group">
-                    <label for="email">Email Address</label>
-                    <input type="email" id="email" name="email" required>
-                </div>
-                <div class="form-group">
-                    <label for="phone">Phone Number</label>
-                    <input type="tel" id="phone" name="phone" required>
-                </div>
-                <div class="form-group">
-                    <label for="country">Preferred Study Destination</label>
-                    <select id="country" name="country" required>
-                        <option value="">Select a country</option>
-                        <option value="usa">United States</option>
-                        <option value="uk">United Kingdom</option>
-                        <option value="australia">Australia</option>
-                        <option value="canada">Canada</option>
-                        <option value="germany">Germany</option>
-                        <option value="ireland">Ireland</option>
-                        <option value="slovakia">Slovakia</option>
-                        <option value="europe">Europe (General)</option>
-                    </select>
-                </div>
-                <div class="form-group">
-                    <label for="program">Program of Interest</label>
-                    <select id="program" name="program" required>
-                        <option value="">Select a program</option>
-                        <option value="undergraduate">Undergraduate</option>
-                        <option value="graduate">Graduate</option>
-                        <option value="phd">PhD</option>
-                        <option value="professional">Professional Courses</option>
-                    </select>
-                </div>
-                <div class="form-group">
-                    <label for="message">Tell us about your goals</label>
-                    <textarea id="message" name="message" rows="4" placeholder="Share your academic background, career goals, and any specific requirements..."></textarea>
-                </div>
-                <button type="submit" class="submit-btn">Get Free Consultation</button>
-            </form>
+            <div class="google-form-container">
+                <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSeyIo6A1mTK9l0uTJ_-jq9m2Z9gxBXjx0yMPyYbh7K9x-KqyQ/viewform?usp=sharing&ouid=109736176749056445810"
+                        width="100%"
+                        height="800"
+                        frameborder="0"
+                        marginheight="0"
+                        marginwidth="0"
+                        style="border-radius: 15px;"
+                        loading="lazy">
+                    Loading...
+                </iframe>
+            </div>
         </div>
     </section>
 
@@ -2450,20 +2346,13 @@
             });
         });
 
-        // Form submission handler
-        function handleSubmit(event) {
-            event.preventDefault();
-
-            // Get form data
-            const formData = new FormData(event.target);
-            const data = Object.fromEntries(formData);
-
-            // Show success message
-            alert('Thank you for your inquiry! We will contact you within 24 hours to schedule your free consultation.');
-
-            // Reset form
-            event.target.reset();
-        }
+        // The handleSubmit function is removed as the Google Form handles submission directly.
+        // function handleSubmit(event) {
+        //     event.preventDefault();
+        //     // Form data collection and alert logic removed
+        //     alert('Thank you for your inquiry! We will contact you within 24 hours to schedule your free consultation.');
+        //     event.target.reset();
+        // }
 
         // Add scroll effect to header
         window.addEventListener('scroll', () => {
