--- a/index.html
+++ b/index.html
@@ -899,7 +899,7 @@
     <section id="home" class="hero">
         <div class="hero-content">
             <h1>Your Gateway to Global Education</h1>
-            <p>Expert guidance for studying abroad in USA, UK, Australia, Canada, and Europe. Transform your dreams into reality with our comprehensive consulting services.</p>
+            <p>Expert guidance for studying abroad in USA, UK, Australia, Canada,Germany,Ireland and Europe. Transform your dreams into reality with our comprehensive consulting services.</p>
             <a href="#contact" class="cta-button">Start Your Journey Today</a>
         </div>
     </section>
@@ -1074,55 +1074,122 @@
                         <input type="hidden" name="subject" value="New Submission from Global Study Advisors Website" />
                         <input type="checkbox" name="botcheck" style="display: none;" />
 
-                        <div class="flex mb-6 space-x-4">
-                            <div class="w-full md:w-1/2">
-                                <label for="first_name" class="block mb-2 text-sm">First Name</label>
-                                <input type="text" name="name" id="first_name" placeholder="John" required class="w-full px-3 py-2" />
-                                <div class="empty-feedback invalid-feedback">
-                                    Please provide your first name.
-                                </div>
-                            </div>
-                            <div class="w-full md:w-1/2">
-                                <label for="last_name" class="block mb-2 text-sm">Last Name</label>
-                                <input type="text" name="last_name" id="last_name" placeholder="Doe" required class="w-full px-3 py-2" />
-                                <div class="empty-feedback invalid-feedback">
-                                    Please provide your last name.
-                                </div>
-                            </div>
-                        </div>
+<div class="flex mb-6 space-x-4">
+    <div class="w-full md:w-1/2">
+        <label for="first_name" class="block mb-2 text-sm">First Name</label>
+        <input type="text" name="first_name" id="first_name" placeholder="John" required class="w-full px-3 py-2" />
+        <div class="empty-feedback invalid-feedback">
+            Please provide your first name.
+        </div>
+    </div>
+    <div class="w-full md:w-1/2">
+        <label for="last_name" class="block mb-2 text-sm">Last Name</label>
+        <input type="text" name="last_name" id="last_name" placeholder="Doe" required class="w-full px-3 py-2" />
+        <div class="empty-feedback invalid-feedback">
+            Please provide your last name.
+        </div>
+    </div>
+</div>
 
-                        <div class="flex mb-6 space-x-4">
-                            <div class="w-full md:w-1/2">
-                                <label for="email" class="block mb-2 text-sm">Email Address</label>
-                                <input type="email" name="email" id="email" placeholder="you@company.com" required class="w-full px-3 py-2" />
-                                <div class="empty-feedback">
-                                    Please provide your email address.
-                                </div>
-                                <div class="invalid-feedback">
-                                    Please provide a valid email address.
-                                </div>
-                            </div>
+<div class="flex mb-6 space-x-4">
+    <div class="w-full md:w-1/2">
+        <label for="email" class="block mb-2 text-sm">Email Address</label>
+        <input type="email" name="email" id="email" placeholder="you@example.com" required class="w-full px-3 py-2" />
+        <div class="empty-feedback">
+            Please provide your email address.
+        </div>
+        <div class="invalid-feedback">
+            Please provide a valid email address.
+        </div>
+    </div>
 
-                            <div class="w-full md:w-1/2">
-                                <label for="phone" class="block text-sm mb-2">Phone Number</label>
-                                <input type="text" name="phone" id="phone" placeholder="+1 (555) 1234-567" required class="w-full px-3 py-2" />
-                                <div class="empty-feedback invalid-feedback">
-                                    Please provide your phone number.
-                                </div>
-                            </div>
-                        </div>
-                        <div class="mb-6">
-                            <label for="message" class="block mb-2 text-sm">Your Message</label>
-                            <textarea rows="5" name="message" id="message" placeholder="Your Message" class="w-full px-3 py-2" required></textarea>
-                            <div class="empty-feedback invalid-feedback">
-                                Please enter your message.
-                            </div>
-                        </div>
-                        <div class="mb-6">
-                            <button type="submit" class="submit-btn">
-                                Send Message
-                            </button>
-                        </div>
+    <div class="w-full md:w-1/2">
+        <label for="phone" class="block text-sm mb-2">Phone Number</label>
+        <input type="text" name="phone" id="phone" placeholder="+1 (555) 1234-567" required class="w-full px-3 py-2" />
+        <div class="empty-feedback invalid-feedback">
+            Please provide your phone number.
+        </div>
+    </div>
+</div>
+
+<div class="mb-6">
+    <label for="current_degree" class="block mb-2 text-sm">Current Degree/Program</label>
+    <input type="text" name="current_degree" id="current_degree" placeholder="e.g., Bachelor of Arts in Psychology" required class="w-full px-3 py-2" />
+    <div class="empty-feedback invalid-feedback">
+        Please provide your current degree or program.
+    </div>
+</div>
+
+<div class="mb-6">
+    <label for="program_interest" class="block mb-2 text-sm">Desired Study Program/Field</label>
+    <input type="text" name="program_interest" id="program_interest" placeholder="e.g., Master in International Business, Exchange Semester in Fine Arts" required class="w-full px-3 py-2" />
+    <div class="empty-feedback invalid-feedback">
+        Please specify the program or field you are interested in.
+    </div>
+</div>
+
+<div class="mb-6">
+    <label class="block mb-2 text-sm">Countries of Interest (select all that apply)</label>
+    <div class="grid grid-cols-2 md:grid-cols-3 gap-y-2">
+        <div>
+            <input type="checkbox" name="countries_interest[]" id="country_usa" value="usa" class="mr-1">
+            <label for="country_usa" class="text-sm">United States</label>
+        </div>
+        <div>
+            <input type="checkbox" name="countries_interest[]" id="country_canada" value="canada" class="mr-1">
+            <label for="country_canada" class="text-sm">Canada</label>
+        </div>
+        <div>
+            <input type="checkbox" name="countries_interest[]" id="country_uk" value="uk" class="mr-1">
+            <label for="country_uk" class="text-sm">United Kingdom</label>
+        </div>
+        <div>
+            <input type="checkbox" name="countries_interest[]" id="country_australia" value="australia" class="mr-1">
+            <label for="country_australia" class="text-sm">Australia</label>
+        </div>
+        <div>
+            <input type="checkbox" name="countries_interest[]" id="country_germany" value="germany" class="mr-1">
+            <label for="country_germany" class="text-sm">Germany</label>
+        </div>
+        <div>
+            <input type="checkbox" name="countries_interest[]" id="country_ireland" value="ireland" class="mr-1">
+            <label for="country_ireland" class="text-sm">Ireland</label>
+        </div>
+        <div>
+            <input type="checkbox" name="countries_interest[]" id="country_slovakia" value="slovakia" class="mr-1">
+            <label for="country_slovakia" class="text-sm">Slovakia</label>
+        </div>
+        <div>
+            <input type="checkbox" name="countries_interest[]" id="country_europe" value="europe" class="mr-1">
+            <label for="country_europe" class="text-sm">Europe</label>
+        </div>
+        <div>
+            <input type="checkbox" name="countries_interest[]" id="country_dubai" value="dubai" class="mr-1">
+            <label for="country_dubai" class="text-sm">Dubai</label>
+        </div>
+        <div>
+            <input type="checkbox" name="countries_interest[]" id="country_other" value="other" class="mr-1">
+            <label for="country_other" class="text-sm">Other</label>
+        </div>
+    </div>
+    <div class="empty-feedback invalid-feedback">
+        Please select at least one country of interest.
+    </div>
+</div>
+
+<div class="mb-6">
+    <label for="study_goals" class="block mb-2 text-sm">Your Study Abroad Goals and Aspirations</label>
+    <textarea rows="7" name="study_goals" id="study_goals" placeholder="Tell us about your academic, career, and personal goals for studying abroad. What do you hope to gain from this experience?" class="w-full px-3 py-2" required></textarea>
+    <div class="empty-feedback invalid-feedback">
+        Please describe your study abroad goals.
+    </div>
+</div>
+
+<div class="mb-6">
+    <button type="submit" class="submit-btn">
+        Submit Information
+    </button>
+</div>
                         <p class="text-base text-center" id="result"></p>
                     </form>
                 </div>
