--- a/index.html
+++ b/index.html
@@ -1358,9 +1358,9 @@
             <div class="footer-content">
                 <div class="footer-section">
                     <h3>Contact Info</h3>
-                    <p>📧 info@zen3edu.com</p>
+                    <p>📧 info@globalstudyadvisors.com</p>
                     <p>📱 +919515208777</p>
-                    <p>📍 123 Education St, Learning City, LC 12345</p>
+                  
                 </div>
                 <div class="footer-section">
                     <h3>Quick Links</h3>
